add maven param to disable ssl verify during test phase